change orange arrows

--- a/wedding/src/components/Navigation/NavLinks.module.scss
+++ b/wedding/src/components/Navigation/NavLinks.module.scss
@@ -2,7 +2,7 @@
   text-decoration-line: underline;
   text-decoration-thickness: 3px;
   text-underline-offset: 10px;
-  text-decoration-color: var(--orange);
+  text-decoration-color: var(--peach);
 }
 
 .buttonLink {
