--- a/wedding/src/styles/globals.scss
+++ b/wedding/src/styles/globals.scss
@@ -86,7 +86,7 @@ html {
   --foreground-inverse: var(--dark-green);
 
   --swiper-navigation-size: 3rem;
-  --swiper-theme-color: var(--orange);
+  --swiper-theme-color: var(--peach);
   --swiper-pagination-bullet-inactive-color: var(--foreground-primary);
 }
 
