--- a/wedding/src/styles/globals.scss
+++ b/wedding/src/styles/globals.scss
@@ -73,8 +73,8 @@ html {
   --ivory-raw: 60deg 100% 97%;
   --ivory: hsl(var(--ivory-raw));
 
-  --dark-green: hsl(157deg 93% 8%);
-  --dark-green: #012719;
+  --dark-green-raw: 157deg 93% 8%;
+  --dark-green: hsl(var(--dark-green-raw));
 
   --light-green: hsl(129deg 40% 60%);
   --light-green: hsl(122deg 32% 43%);
