--- a/wedding/src/pages/registry.module.scss
+++ b/wedding/src/pages/registry.module.scss
@@ -1,10 +1,34 @@
 .registryContainer {
-  width: min(85%, 450px);
+  width: min(85%, 900px);
   margin: 0 auto;
   text-align: center;
 
   .header {
     margin-top: 20px;
     margin-bottom: 30px;
+  }
+
+  .registryGrid {
+    list-style: none;
+    padding-left: 0;
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 16px;
+
+    .registryLink {
+      flex: 1;
+      background-color: var(--peach);
+      min-height: 100px;
+      border-radius: 8px;
+      position: relative;
+    }
+  }
+}
+
+@media (min-width: 700px) {
+  .registryContainer .registryGrid {
+    flex-direction: row;
   }
 }
