Use smaller logo on mobile

--- a/wedding/src/components/Header/Header.module.css
+++ b/wedding/src/components/Header/Header.module.css
@@ -1,5 +1,5 @@
 .header {
-  margin-block: 4px;
+  min-height: 60px;
   background-color: var(--background-primary);
   display: flex;
   flex-direction: column;
