--- a/wedding/src/components/Logo/Logo.module.css
+++ b/wedding/src/components/Logo/Logo.module.css
@@ -2,10 +2,16 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-  font-size: 2.5rem;
+  font-size: 1.75rem;
   color: var(--foreground-secondary);
 }
 
 .heartpersand {
   stroke: var(--foreground-secondary);
+}
+
+@media (min-width: 924px) {
+  .logo {
+    font-size: 2.5rem;
+  }
 }
