--- a/wedding/src/components/Logo/Logo.module.css
+++ b/wedding/src/components/Logo/Logo.module.css
@@ -1,12 +1,17 @@
 .logo {
   display: flex;
   align-items: center;
-  height: 60px;
   cursor: pointer;
-  font-size: 1.5rem;
+  font-size: 1.75rem;
   color: var(--foreground-secondary);
 }
 
 .heartpersand {
   stroke: var(--foreground-secondary);
+}
+
+@media (min-width: 924px) {
+  .logo {
+    font-size: 2.5rem;
+  }
 }
