--- a/wedding/src/pages/schedule.module.scss
+++ b/wedding/src/pages/schedule.module.scss
@@ -13,3 +13,15 @@
   max-width: 500px;
   aspect-ratio: 2 / 3;
 }
+
+.shuttle {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: var(--grey-40);
+  font-style: italic;
+
+  &:first-of-type {
+    padding-top: 32px;
+  }
+}
