add currently brewing icon

--- a/johnverrone/src/routes/globals.css
+++ b/johnverrone/src/routes/globals.css
@@ -9,6 +9,7 @@
 	--color-text-secondary: #767676;
 	--color-background: rgba(255, 255, 255, 0.5);
 	--color-accent: #bf8640;
+	--color-hint: #dcd8c8;
 	--color-card-bg: #1e2127;
 	--color-card-fg: #98c379;
 	--color-menu-bg: hsl(0deg 0% 90% / 90%);
